--- a/tp/lab/package.json
+++ b/tp/lab/package.json
@@ -8,14 +8,14 @@
   ],
   "scripts": {
     "start": "nodemon ./bin/server.js",
-    "test": "cross-env NODE_ENV=testing mocha 'test/**/*.js'"
+    "test": "cross-env NODE_ENV=test mocha 'test/**/*.js'"
   },
   "dependencies": {
     "body-parser": "1.19.0",
-    "cross-env": "^7.0.3",
+    "cross-env": "7.0.3",
     "express": "4.17.1",
     "level": "6.0.1",
-    "nodemon": "^2.0.7",
+    "nodemon": "2.0.7",
     "uuid": "8.3.2"
   },
   "devDependencies": {
